azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {

        "adSubnetName": {
            "type": "string",
            "metadata": {
                "description": "The name of the vm subnet created in the new VNET."
            },
            "defaultValue": "adSubnet",
            "minLength": 2,
            "maxLength": 16
        },
        "adSubnet": {
            "type": "string",
            "metadata": {
                "description": "The address range of the subnet created in the new VNET."
            },
            "defaultValue": "10.0.0.0/24"
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Region to create Resources. Defaults to Resource Group"
            }
        },
        "vnetName": {
            "defaultValue": "pluralsight-vnet",
            "type": "String"
        },
        "networkSecurityGroup": {
            "type": "string",
            "defaultValue": "pluralsight-nsg",
            "metadata": {
                "description": "description"
            }
        },
        "externalDNSForwarder": {
            "type": "string",
            "metadata": {
                "description": "DNS forwarder for all non-domain (external) related DNS queries."
            },
            "defaultValue": "168.63.129.16"
        },
        "artifactsLocation": {
            "type": "string",
            "metadata": {
                "description": "The location of resources such as templates and DSC modules that the script depends on. No need to change unless you copy or fork this template."
            },
            "defaultValue": "https://raw.githubusercontent.com/emersnbe/AzureDeploySPFarm/master/"

        },
        "DCName": {
            "type": "string",
            "defaultValue": "DC1"
        },

        "DCvmSize": {
            "type": "string",
            "defaultValue": "Standard_B2ms"
        },

        "DCsku": {
            "type": "string",
            "defaultValue": "2016-Datacenter",
            "allowedValues": [
                "2016-Datacenter",
                "2019-Datacenter"
            ]
        },

        "SQLandSPServers": {
            "type": "array",
            "defaultValue": [
                {
                    "vmName": "SQL1",
                    "vmSize": "Standard_B4ms",
                    "vmIPAddress": "10.0.0.5",
                    "vmImagePublisher": "MicrosoftWindowsServer",
                    "vmImageOffer": "WindowsServer",
                    "vmImageSku": "2016-Datacenter"
                },
                {
                    "vmName": "SPAPP",
                    "vmSize": "Standard_B4ms",
                    "vmIPAddress": "10.0.0.6",
                    "vmImagePublisher": "MicrosoftWindowsServer",
                    "vmImageOffer": "WindowsServer",
                    "vmImageSku": "2016-Datacenter"
                },
                {
                    "vmName": "SPWFE",
                    "vmSize": "Standard_B4ms",
                    "vmIPAddress": "10.0.0.7",
                    "vmImagePublisher": "MicrosoftWindowsServer",
                    "vmImageOffer": "WindowsServer",
                    "vmImageSku": "2016-Datacenter"
                }
            ]




        },
        "diskType": {
            "type": "string",
            "defaultValue": "StandardSSD_LRS"
        },
        "DCIPAddress": {
            "type": "string",
            "defaultValue": "10.0.0.4"
        },
        "adminusername": {
            "type": "string",
            "defaultValue": "adadmin"
        },

        "adminpassword": {
            "type": "securestring"
        },
        "domainname": {
            "defaultValue": "contoso.com",
            "type": "string"
        }

    },
    "functions": [
    ],
    "variables": {

    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-04-01",
            "name": "[parameters('networkSecurityGroup')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [
                            ],
                            "destinationPortRanges": [
                            ],
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    }
                ]
            }
        },

        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-04-01",
            "name": "[parameters('vnetName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },


                "subnets": [
                    {
                        "name": "[parameters('adSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('adSubnet')]",
                            "serviceEndpoints": [
                            ],
                            "delegations": [
                            ],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('networkSecurityGroup'))]"
                            }
                        }
                    }
                ],
                "virtualNetworkPeerings": [
                ],
                "enableDdosProtection": false,
                "enableVmProtection": false

            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-04-01",
            "name": "[concat(parameters('networkSecurityGroup'), '/RDP')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [
                ],
                "destinationPortRanges": [
                ],
                "sourceAddressPrefixes": [
                ],
                "destinationAddressPrefixes": [
                ]
            }
        },
        {
            "name": "CreateDC",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2019-10-01",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks',parameters('vnetName'))]"
            ],

            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[concat(parameters('artifactsLocation'), 'nestedtemplates/CreateDC.json')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "vmName": {
                        "value": "[parameters('DCName')]"
                    },
                    "vmSize": {
                        "value": "[parameters('DCvmSize')]"
                    },
                    "vmsku": {
                        "value": "[parameters('DCsku')]"
                    },
                    "diskType": {
                        "value": "[parameters('diskType')]"
                    },
                    "vmRole": {
                        "value": "PDC"
                    },

                    "vmIPAddress": {
                        "value": "[parameters('DCIPAddress')]"
                    },
                    "domainName": {
                        "value": "[parameters('domainname')]"
                    },
                    "vnetName": {
                        "value": "[parameters('vnetName')]"
                    },
                    "subnetName": {
                        "value": "[parameters('adsubnetName')]"
                    },
                    "networkSecurityGroup": {
                        "value": "[parameters('networkSecurityGroup')]"
                    },


                    "adminusername": {
                        "value": "[parameters('adminusername')]"
                    },
                    "adminpassword": {
                        "value": "[parameters('adminpassword')]"
                    }
                }
            }
        },
        {
            "name": "CreateForest",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2019-10-01",
            "dependsOn": [
                "Microsoft.Resources/deployments/CreateDC"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[concat(parameters('artifactsLocation'), 'nestedtemplates/CreateForest.json')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "vmName": {
                        "value": "[parameters('DCName')]"
                    },
                    "location": {
                        "value": "[parameters('location')]"
                    },
                    "adminUsername": {
                        "value": "[parameters('adminUsername')]"
                    },
                    "adminPassword": {
                        "value": "[parameters('adminPassword')]"
                    },
                    "domainName": {
                        "value": "[parameters('domainName')]"
                    },
                    "DNSForwarder": {
                        "value": "[parameters('externalDNSForwarder')]"
                    },
                    "artifactsLocation": {
                        "value": "[parameters('artifactsLocation')]"
                    }
                }
            }
        },

        {

            "name": "UpdateVNet",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2019-10-01",
            "dependsOn": [
                "Microsoft.Resources/deployments/CreateForest"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[concat(parameters('artifactsLocation'), 'nestedtemplates/vnetwithDNS.json')]",
                    "contentVersion": "1.0.0.0"
                },

                "parameters": {
                    "vnetName": {
                        "value": "[parameters('vnetName')]"
                    },
                    "location": {
                        "value": "[parameters('location')]"

                    },
                    "adSubnetName": {
                        "value": "[parameters('adSubnetName')]"
                    },
                    "adSubnet": {
                        "value": "[parameters('adSubnet')]"
                    },
                    "networkSecurityGroup": {
                        "value": "[parameters('networkSecurityGroup')]"
                    }

                }
            }
        },
        {
            "name": "[concat('Create',parameters('SQLandSPServers')[copyIndex()].vmName)]",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2019-10-01",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks',parameters('vnetName'))]",
                "Microsoft.Resources/Deployments/CreateForest"

            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[concat(parameters('artifactsLocation'), 'nestedtemplates/CreateOtherDomainServers.json')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "vmName": {
                        "value": "[parameters('SQLandSPServers')[copyIndex()].vmName]"
                    },
                    "vmIPAddress": {
                        "value": "[parameters('SQLandSPServers')[copyIndex()].vmIPAddress]"
                    },


                    "vmSize": {
                        "value": "[parameters('SQLandSPServers')[copyIndex()].vmSize]"
                    },
                    "vmImagePublisher": {
                        "value": "[parameters('SQLandSPServers')[copyIndex()].vmImagePublisher]"
                    },
                    "vmImageOffer": {
                        "value": "[parameters('SQLandSPServers')[copyIndex()].vmImageOffer]"
                    },
                    "vmImageSku": {
                        "value": "[parameters('SQLandSPServers')[copyIndex()].vmImageSku]"
                    },
                    "diskType": {
                        "value": "[parameters('diskType')]"
                    },


                    "domainName": {
                        "value": "[parameters('domainname')]"
                    },
                    "vnetName": {
                        "value": "[parameters('vnetName')]"
                    },
                    "subnetName": {
                        "value": "[parameters('adsubnetName')]"
                    },
                    "networkSecurityGroup": {
                        "value": "[parameters('networkSecurityGroup')]"
                    },


                    "adminusername": {
                        "value": "[parameters('adminusername')]"
                    },
                    "adminpassword": {
                        "value": "[parameters('adminpassword')]"
                    }
                }
            },

            "copy": {
                "name": "vmCopy",
                "count": "[length(parameters('SQLandSPServers'))]"
            }
        }
    ],
    "outputs": {



    }
}
